objects/Weathers__c.object
<CustomObject>
    <fields>
        <fullName>Air_Speed__c</fullName>
        <label>Air Speed</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Temperature__c</fullName>
        <label>Max Temperature</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Max_Temperature__c</fullName>
        <formula>TEXT(Min_Temperature__c)&amp;&quot;/&quot;&amp;Text(Max_Temperature__c)</formula>
        <label>Min/Max Temperature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Temperature__c</fullName>
        <label>Min Temperature</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressure_hPa__c</fullName>
        <label>Pressure(hPa)</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weather_Description__c</fullName>
        <label>Weather</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <label>Weather</label>
        <referenceTo>Weather_Histories__c</referenceTo>
        <relationshipName>Weather_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Weathers</label>
    <nameField>
        <displayFormat>WH-{000000}</displayFormat>
        <label>Weather Histories Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weathers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>